--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -1,4 +1,4 @@
-USER_USERNAME=appuser
-USER_PASSWORD=pass
+DATABASE_USERNAME=appuser
+DATABASE_PASSWORD=pass
 JWT_SIGNING_KEY=sKfWrZFb3Z3NnlW4eZTo3R3f12ty6UHaOTY1eUkYOtk=
-ENCRYPTION_SECRET=12345678901234561234567890123456
+encryption.secret-key=${ENCRYPTION_SECRET_KEY}
